# icn-agoranet

./: .dockerignore  .env.sample  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  Dockerfile.bak  README.md  docker-compose-federation.yml  docker-compose.integration.yml  docker-compose.yml  run_all_tests.sh  test_agoranet.sh  test_federation.sh  test_integration.sh  test_runtime_events.sh
.cursor/rules/: scaffold-agoranet-api.mdc
migrations/: 20240502_initial_schema.sql  20240503_optimizations.sql  20240510_performance_optimization.sql
mock_runtime/: Dockerfile  events.json  server.py
scripts/: gen_agoranet_context_dump.sh  integration_test.sh  load_test.js  reset_test_db.sh
src/: database.rs  docs.rs  health.rs  main.rs  state.rs
src/api/: credential_linking.rs  mod.rs  thread.rs
src/auth/: mod.rs
src/federation/: discovery.rs  mod.rs  network.rs  protocol.rs  sync.rs
src/models/: mod.rs  thread.rs
src/routes/: credentials.rs  messages.rs  mod.rs  threads.rs
src/runtime/: mod.rs
src/storage/: credentials.rs  db.rs  messages.rs  mod.rs  reactions.rs  threads.rs
src/types/: mod.rs
