[package]
name = "icn-agoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
libp2p = { version = "0.53", features = ["gossipsub"] }
cid = "0.8"
multihash = "0.16"

[dev-dependencies]
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] } 