[package]
name = "icn-agoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
libp2p = { version = "0.53", features = ["gossipsub", "identify", "kad", "noise", "tcp", "tokio", "yamux"] }
cid = "0.8"
multihash = "0.16"
axum-server = "0.7.2"
dotenvy = "0.15"
futures = "0.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = "9.0.1"

[dev-dependencies]
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] } 
